Migrate Business Process catalogue query slice
